continue vue and test example from github

--- a/src/intro.tex
+++ b/src/intro.tex
@@ -34,9 +34,9 @@ new Vue({ // Vue的实例创建一个VM对象
 
 
 \begin{compactitem}
-\item Vue的el指定一个视图模板；
-\item Vue的实例创建一个VM对象；
-\item Vue实例的数据填充到视图模板。
+\item Vue的el指定一个视图模板（\texttt{el: '#app'}）；
+\item Vue的实例创建一个VM对象（\texttt{<Root> == $vm0}）；
+\item Vue实例的数据填充到视图模板（\texttt{message: "Hello Vue.js!"}）。
 \end{compactitem}
 
 Vue.js提供了配套的工具来开发单文件组件。
